# Bsc-Thesis-Karcag-David

./: .gitignore  BnC.cc  CMakeLists.txt  Heuristic.h  Menetrend.md  Perfomance_test.cc  README.md  RndGraph.cc  smallTSPsolver.cc  subTask_Bounds.h
Links_and_pdfs/B&B/: Notes.docx
Old_Bruteforce_based_solver/: smallTSPsolver.cc
SmallTSP0223/: smallTSPsolver.cc  subTask_Bounds.h
SmallTSP0224/: CMakeLists.txt  smallTSPsolver.cc
SmallTSP_Solver/: CMakeLists.txt  RndGraph.cc  smallTSPsolver.cc
SmallTSPsolver/: CMakeLists.txt  smallTSPsolver.cc
Thesis/: Thesis.html
Thesis/B&cut/: Notes.docx
contrib/: BnC.h  CMakeLists.txt  Column.h  Heldkarp.h  Heuristic.cc  Heuristic.h  LB  Makestats.cc  Makestats.h  Preflow.h  SST_bound.cc  TSP_generator.h  TSPrandom.cc  smallTSPsolver.cc  subTask_Bounds.h  test_run.cc  test_runs.cc  test_tools.h
