INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}
  ${PROJECT_BINARY_DIR}
)

LINK_DIRECTORIES(
  ${PROJECT_BINARY_DIR}/lemon
)
ADD_EXECUTABLE(Rnd RndGraph.cc)
TARGET_LINK_LIBRARIES(Rnd lemon)

# ADD_EXECUTABLE(demo 
#     LEMONvsCPLEX.cc
# )
# TARGET_LINK_LIBRARIES(demo lemon)

ADD_EXECUTABLE(STSP 
    smallTSPsolver.cc
)
TARGET_LINK_LIBRARIES(STSP lemon)


ADD_EXECUTABLE(Perfomance_test 
    Perfomance_test.cc
)
TARGET_LINK_LIBRARIES(Perfomance_test lemon)

ADD_EXECUTABLE(BnC 
    BnC.cc
)
TARGET_LINK_LIBRARIES(BnC lemon)